--- a/index.html
+++ b/index.html
@@ -223,9 +223,6 @@
             const data = JSON.parse(localStorage.getItem('usageData')) || [];
             if (data.length === 0) return;
 
-            // Sortowanie danych od najnowszego do najstarszego
-            data.sort((a, b) => new Date(b.date) - new Date(a.date));
-
             const allDates = Array.from(new Set(data.map(entry => entry.date))).sort();
             const dataMap = new Map(data.map(entry => [entry.date, { gas: entry.gas, electricity: entry.electricity }]));
 
@@ -250,121 +247,128 @@
                 }
             });
 
-            const dailyData = allDates.map((date, index) => ({
-                date,
-                gas: index === 0 ? gasData[0] : gasData[index] - gasData[index - 1],
-                electricity: index === 0 ? electricityData[0] : electricityData[index] - electricityData[index - 1]
-            }));
+            const dailyGasUsage = [];
+            const dailyElectricityUsage = [];
 
-            const ctxUsage = document.getElementById('usageChart').getContext('2d');
-            const ctxDailyUsage = document.getElementById('dailyUsageChart').getContext('2d');
-            const ctxFilteredUsage = document.getElementById('filteredUsageChart').getContext('2d');
-            const ctxFilteredDailyUsage = document.getElementById('filteredDailyUsageChart').getContext('2d');
+            for (let i = 1; i < gasData.length; i++) {
+                dailyGasUsage.push(gasData[i] - gasData[i - 1]);
+                dailyElectricityUsage.push(electricityData[i] - electricityData[i - 1]);
+            }
 
-            const usageChart = new Chart(ctxUsage, {
+            const usageChartCtx = document.getElementById('usageChart').getContext('2d');
+            new Chart(usageChartCtx, {
                 type: 'line',
                 data: {
-                    labels,
+                    labels: labels,
                     datasets: [
                         {
                             label: 'Zużycie gazu',
                             data: gasData,
                             borderColor: 'rgba(255, 99, 132, 1)',
                             backgroundColor: 'rgba(255, 99, 132, 0.2)',
-                            fill: false
+                            fill: true,
                         },
                         {
                             label: 'Zużycie prądu',
                             data: electricityData,
                             borderColor: 'rgba(54, 162, 235, 1)',
                             backgroundColor: 'rgba(54, 162, 235, 0.2)',
-                            fill: false
+                            fill: true,
                         }
                     ]
+                },
+                options: {
+                    responsive: true,
+                    scales: {
+                        y: {
+                            beginAtZero: true
+                        },
+                        x: {
+                            display: true
+                        }
+                    }
                 }
             });
 
-            const dailyUsageChart = new Chart(ctxDailyUsage, {
+            const dailyUsageChartCtx = document.getElementById('dailyUsageChart').getContext('2d');
+            new Chart(dailyUsageChartCtx, {
                 type: 'line',
                 data: {
-                    labels: dailyData.map(entry => entry.date),
+                    labels: labels.slice(1),
                     datasets: [
                         {
                             label: 'Dzienne zużycie gazu',
-                            data: dailyData.map(entry => entry.gas),
-                            borderColor: 'rgba(255, 99, 132, 1)',
-                            backgroundColor: 'rgba(255, 99, 132, 0.2)',
-                            fill: false
+                            data: dailyGasUsage,
+                            borderColor: 'rgba(255, 159, 64, 1)',
+                            backgroundColor: 'rgba(255, 159, 64, 0.2)',
+                            fill: true,
                         },
                         {
                             label: 'Dzienne zużycie prądu',
-                            data: dailyData.map(entry => entry.electricity),
-                            borderColor: 'rgba(54, 162, 235, 1)',
-                            backgroundColor: 'rgba(54, 162, 235, 0.2)',
-                            fill: false
+                            data: dailyElectricityUsage,
+                            borderColor: 'rgba(75, 192, 192, 1)',
+                            backgroundColor: 'rgba(75, 192, 192, 0.2)',
+                            fill: true,
                         }
                     ]
+                },
+                options: {
+                    responsive: true,
+                    scales: {
+                        y: {
+                            beginAtZero: true
+                        },
+                        x: {
+                            display: true
+                        }
+                    }
                 }
             });
 
-            // Aktualizacja tabel
-            updateTable('dataTable', data);
-            updateTable('filteredDataTable', []);
+            updateTable(data, 'dataTable');
         }
 
-        function updateTable(tableId, data) {
-            const tableContainer = document.getElementById(tableId);
-            const table = document.createElement('table');
+        function updateTable(data, tableId) {
+            const table = document.getElementById(tableId);
+            table.innerHTML = '';
 
-            const thead = document.createElement('thead');
-            const tbody = document.createElement('tbody');
+            if (data.length === 0) {
+                table.innerHTML = '<p>Brak danych do wyświetlenia.</p>';
+                return;
+            }
 
-            const headerRow = document.createElement('tr');
-            const headers = ['Data', 'Stan licznika gazu', 'Stan licznika prądu'];
+            let tableHTML = '<table><thead><tr><th>Data</th><th>Zużycie gazu</th><th>Zużycie prądu</th><th>Dzienne zużycie gazu</th><th>Dzienne zużycie prądu</th></tr></thead><tbody>';
+            let prevGas = 0;
+            let prevElectricity = 0;
 
-            headers.forEach(header => {
-                const th = document.createElement('th');
-                th.textContent = header;
-                headerRow.appendChild(th);
+            data.forEach((entry, index) => {
+                const dailyGas = index > 0 ? (entry.gas - data[index - 1].gas) : 0;
+                const dailyElectricity = index > 0 ? (entry.electricity - data[index - 1].electricity) : 0;
+                tableHTML += `<tr><td>${entry.date}</td><td>${entry.gas}</td><td>${entry.electricity}</td><td>${dailyGas}</td><td>${dailyElectricity}</td></tr>`;
+                prevGas = entry.gas;
+                prevElectricity = entry.electricity;
             });
-            thead.appendChild(headerRow);
+            tableHTML += '</tbody></table>';
 
-            data.forEach(entry => {
-                const row = document.createElement('tr');
-                const dateCell = document.createElement('td');
-                dateCell.textContent = entry.date;
-                const gasCell = document.createElement('td');
-                gasCell.textContent = entry.gas;
-                const electricityCell = document.createElement('td');
-                electricityCell.textContent = entry.electricity;
-                row.appendChild(dateCell);
-                row.appendChild(gasCell);
-                row.appendChild(electricityCell);
-                tbody.appendChild(row);
-            });
-
-            table.appendChild(thead);
-            table.appendChild(tbody);
-            tableContainer.innerHTML = '';
-            tableContainer.appendChild(table);
+            table.innerHTML = tableHTML;
         }
 
         function filterAndUpdateCharts() {
             const startDate = document.getElementById('startDate').value;
             const endDate = document.getElementById('endDate').value;
+
+            if (!startDate || !endDate) {
+                alert("Wprowadź poprawny zakres dat.");
+                return;
+            }
+
             const data = JSON.parse(localStorage.getItem('usageData')) || [];
+            const filteredData = data.filter(entry => entry.date >= startDate && entry.date <= endDate);
 
-            let filteredData = data;
-
-            if (startDate) {
-                filteredData = filteredData.filter(entry => new Date(entry.date) >= new Date(startDate));
+            if (filteredData.length === 0) {
+                alert("Brak danych w wybranym zakresie dat.");
+                return;
             }
-
-            if (endDate) {
-                filteredData = filteredData.filter(entry => new Date(entry.date) <= new Date(endDate));
-            }
-
-            filteredData.sort((a, b) => new Date(b.date) - new Date(a.date));
 
             const allDates = Array.from(new Set(filteredData.map(entry => entry.date))).sort();
             const dataMap = new Map(filteredData.map(entry => [entry.date, { gas: entry.gas, electricity: entry.electricity }]));
@@ -390,87 +394,105 @@
                 }
             });
 
-            const dailyData = allDates.map((date, index) => ({
-                date,
-                gas: index === 0 ? gasData[0] : gasData[index] - gasData[index - 1],
-                electricity: index === 0 ? electricityData[0] : electricityData[index] - electricityData[index - 1]
-            }));
+            const dailyGasUsage = [];
+            const dailyElectricityUsage = [];
 
-            const ctxFilteredUsage = document.getElementById('filteredUsageChart').getContext('2d');
-            const ctxFilteredDailyUsage = document.getElementById('filteredDailyUsageChart').getContext('2d');
+            for (let i = 1; i < gasData.length; i++) {
+                dailyGasUsage.push(gasData[i] - gasData[i - 1]);
+                dailyElectricityUsage.push(electricityData[i] - electricityData[i - 1]);
+            }
 
-            const filteredUsageChart = new Chart(ctxFilteredUsage, {
+            const filteredUsageChartCtx = document.getElementById('filteredUsageChart').getContext('2d');
+            new Chart(filteredUsageChartCtx, {
                 type: 'line',
                 data: {
-                    labels,
+                    labels: labels,
                     datasets: [
                         {
                             label: 'Zużycie gazu (przefiltrowane)',
                             data: gasData,
-                            borderColor: 'rgba(255, 99, 132, 1)',
-                            backgroundColor: 'rgba(255, 99, 132, 0.2)',
-                            fill: false
+                            borderColor: '#FFFF66',
+                            backgroundColor: '#FFFF99',
+                            fill: true,
                         },
                         {
                             label: 'Zużycie prądu (przefiltrowane)',
                             data: electricityData,
-                            borderColor: 'rgba(54, 162, 235, 1)',
-                            backgroundColor: 'rgba(54, 162, 235, 0.2)',
-                            fill: false
+                            borderColor: '#1E90FF',
+                            backgroundColor: '#6495ED',
+                            fill: true,
                         }
                     ]
+                },
+                options: {
+                    responsive: true,
+                    scales: {
+                        y: {
+                            beginAtZero: true
+                        },
+                        x: {
+                            display: true
+                        }
+                    }
                 }
             });
 
-            const filteredDailyUsageChart = new Chart(ctxFilteredDailyUsage, {
+            const filteredDailyUsageChartCtx = document.getElementById('filteredDailyUsageChart').getContext('2d');
+            new Chart(filteredDailyUsageChartCtx, {
                 type: 'line',
                 data: {
-                    labels: dailyData.map(entry => entry.date),
+                    labels: labels.slice(1),
                     datasets: [
                         {
                             label: 'Dzienne zużycie gazu (przefiltrowane)',
-                            data: dailyData.map(entry => entry.gas),
-                            borderColor: 'rgba(255, 99, 132, 1)',
-                            backgroundColor: 'rgba(255, 99, 132, 0.2)',
-                            fill: false
+                            data: dailyGasUsage,
+                            borderColor: '#FFFF66',
+                            backgroundColor: '#FFFF99',
+                            fill: true,
                         },
                         {
                             label: 'Dzienne zużycie prądu (przefiltrowane)',
-                            data: dailyData.map(entry => entry.electricity),
-                            borderColor: 'rgba(54, 162, 235, 1)',
-                            backgroundColor: 'rgba(54, 162, 235, 0.2)',
-                            fill: false
+                            data: dailyElectricityUsage,
+                            borderColor: '#1E90FF',
+                            backgroundColor: '#6495ED',
+                            fill: true,
                         }
                     ]
+                },
+                options: {
+                    responsive: true,
+                    scales: {
+                        y: {
+                            beginAtZero: true
+                        },
+                        x: {
+                            display: true
+                        }
+                    }
                 }
             });
 
-            updateTable('filteredDataTable', filteredData);
+            updateTable(filteredData, 'filteredDataTable');
         }
 
         function exportToPDF() {
             const doc = new jsPDF();
-            doc.text('Zużycie gazu i prądu', 10, 10);
+            doc.text("Tabela zużycia", 10, 10);
 
-            const dataTable = document.getElementById('dataTable');
-            html2canvas(dataTable).then(canvas => {
-                const imgData = canvas.toDataURL('image/png');
-                doc.addImage(imgData, 'PNG', 10, 20);
-                doc.addPage();
-                doc.text('Przefiltrowane zużycie gazu i prądu', 10, 10);
-
-                const filteredDataTable = document.getElementById('filteredDataTable');
-                html2canvas(filteredDataTable).then(filteredCanvas => {
-                    const filteredImgData = filteredCanvas.toDataURL('image/png');
-                    doc.addImage(filteredImgData, 'PNG', 10, 20);
+            const table = document.querySelector('#dataTable table');
+            if (table) {
+                html2canvas(table).then(canvas => {
+                    const imgData = canvas.toDataURL('image/png');
+                    doc.addImage(imgData, 'PNG', 10, 20, 190, 0);
                     doc.save('zuzycie.pdf');
                 });
-            });
+            } else {
+                doc.text("Brak danych do eksportu.", 10, 20);
+                doc.save('zuzycie.pdf');
+            }
         }
 
-        window.onload = function() {
-            updateCharts();
-        }
+        window.onload = updateCharts;
     </script>
 </body>
 </html>
