--- a/index.html
+++ b/index.html
@@ -411,15 +411,15 @@
                         {
                             label: 'Zużycie gazu (przefiltrowane)',
                             data: gasData,
-                            borderColor: '#FFFF66',
-                            backgroundColor: '#FFFF99',
+                            borderColor: 'rgba(255, 99, 132, 1)',
+                            backgroundColor: 'rgba(255, 99, 132, 0.2)',
                             fill: true,
                         },
                         {
                             label: 'Zużycie prądu (przefiltrowane)',
                             data: electricityData,
-                            borderColor: '#1E90FF',
-                            backgroundColor: '#6495ED',
+                            borderColor: 'rgba(54, 162, 235, 1)',
+                            backgroundColor: 'rgba(54, 162, 235, 0.2)',
                             fill: true,
                         }
                     ]
@@ -446,15 +446,15 @@
                         {
                             label: 'Dzienne zużycie gazu (przefiltrowane)',
                             data: dailyGasUsage,
-                            borderColor: '#FFFF66',
-                            backgroundColor: '#FFFF99',
+                            borderColor: 'rgba(255, 159, 64, 1)',
+                            backgroundColor: 'rgba(255, 159, 64, 0.2)',
                             fill: true,
                         },
                         {
                             label: 'Dzienne zużycie prądu (przefiltrowane)',
                             data: dailyElectricityUsage,
-                            borderColor: '#1E90FF',
-                            backgroundColor: '#6495ED',
+                            borderColor: 'rgba(75, 192, 192, 1)',
+                            backgroundColor: 'rgba(75, 192, 192, 0.2)',
                             fill: true,
                         }
                     ]
